samples/_failures_safe/1761297084_f815e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b31b8d9.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8b31b8d9.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
